@@ -33,8 +33,9 @@ public class LlmService {
     private final KeywordRepository keywordRepository;
     private final ChatLanguageModel chatLanguageModel;
 
-    public String generateReason(String userId) {
-        KeywordSelection keywordSelection = keywordRepository.findByUserId(userId);
+    // 컨텐츠 추천 이유
+    public String generateReason(String keywords) {
+        KeywordSelection keywordSelection = keywordRepository.findByKeywords(keywords);
 
         String prompt = String.format("""
             [시스템]
@@ -58,8 +59,9 @@ public class LlmService {
         return recommendation;
     }
 
-    public String recommendMovie(String genre, String userId) {
-        KeywordSelection keywordSelection = keywordRepository.findByUserId(userId);
+    public String recommendMovie(String genre, String keywords) {
+        KeywordSelection keywordSelection = keywordRepository.findByKeywords(keywords);
+    // 영화 추천
         byte[] byteEmbedding = keywordSelection.getEmbedding();
         float[] floatEmbedding = toFloatArray(byteEmbedding);
         List<Movie> rawMovies;
@@ -80,9 +82,9 @@ public class LlmService {
                 return new AbstractMap.SimpleEntry<>(movie, similarity);
             })
             .sorted((a, b) -> Float.compare(b.getValue(), a.getValue()))
-            .limit(15)
+            .limit(40)
             .map(Map.Entry::getKey)
-            .collect(Collectors.toList());
+            .toList();
 
         String context = movies.stream()
             .map(m -> String.format("제목: %s\n영화소개: %s", m.getTitle(), m.getSummary()))
@@ -95,8 +97,9 @@ public class LlmService {
         return result;
     }
 
-    public String recommendBook(String userId) {
-        KeywordSelection keywordSelection = keywordRepository.findByUserId(userId);
+    // 도서 추천
+    public String recommendBook(String keywords) {
+        KeywordSelection keywordSelection = keywordRepository.findByKeywords(keywords);
         byte[] byteEmbedding = keywordSelection.getEmbedding();
         float[] floatEmbedding = toFloatArray(byteEmbedding);
         List<Book> books = bookRepository.findAll().stream().map(book -> {
@@ -106,9 +109,9 @@ public class LlmService {
                 );
                 return new AbstractMap.SimpleEntry<>(book, similarity);
             }).sorted((a, b) -> Float.compare(b.getValue(), a.getValue()))
-            .limit(15)
+            .limit(40)
             .map(Map.Entry::getKey)
-            .collect(Collectors.toList());
+            .toList();
 
         String context = books.stream()
             .map(b -> String.format("제목: %s\n책소개: %s", b.getTitle(), b.getSummary()))
@@ -121,8 +124,9 @@ public class LlmService {
         return result;
     }
 
-    public String recommendMusic(String userId) {
-        KeywordSelection keywordSelection = keywordRepository.findByUserId(userId);
+    // 음악 추천
+    public String recommendMusic(String keywords) {
+        KeywordSelection keywordSelection = keywordRepository.findByKeywords(keywords);
         byte[] byteEmbedding = keywordSelection.getEmbedding();
         float[] floatEmbedding = toFloatArray(byteEmbedding);
         List<Music> musics = musicRepository.findAll().stream().map(music -> {
@@ -132,9 +136,9 @@ public class LlmService {
                 );
                 return new AbstractMap.SimpleEntry<>(music, similarity);
             }).sorted((a, b) -> Float.compare(b.getValue(), a.getValue()))
-            .limit(15)
+            .limit(40)
             .map(Map.Entry::getKey)
-            .collect(Collectors.toList());
+            .toList();
 
         String context = musics.stream()
             .map(m -> String.format("제목: %s\n노래소개: %s", m.getTitle(), m.getSummary()))
@@ -147,6 +151,7 @@ public class LlmService {
         return result;
     }
 
+    // 콘텐츠 추천 llm 호출
     private String llmRecommend(String category, String keywords, String context) {
         String prompt = String.format("""
             [시스템]
@@ -172,10 +177,12 @@ public class LlmService {
         return recommendation;
     }
 
+    // 임베딩 값 변환
     private float[] toFloatArray(byte[] bytes) {
         FloatBuffer buffer = ByteBuffer.wrap(bytes).asFloatBuffer();
         float[] floats = new float[buffer.remaining()];
         buffer.get(floats);
         return floats;
     }
+
 }
